# qt-occt-cad-sample-codexai

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: architecture.md
occt-qopenglwidget/: CMakeLists.txt  OcctQOpenGLWidgetViewer.cpp  OcctQOpenGLWidgetViewer.h  main.cpp
occt-qopenglwidget/tests/: CMakeLists.txt  sanity_test.cpp
src/: CMakeLists.txt  main.cpp  main_qml.cpp
src/core/: CMakeLists.txt  KernelAPI.cpp  KernelAPI.h
src/doc/: CMakeLists.txt  DocumentItem.cpp  DocumentItem.h
src/model/: AxeFeature.cpp  AxeFeature.h  BoxFeature.cpp  BoxFeature.h  CMakeLists.txt  CylinderFeature.cpp  CylinderFeature.h  Datum.h  Document.cpp  Document.h  DocumentInitializer.cpp  DocumentInitializer.h  DocumentItem.h  ExtrudeFeature.cpp  ExtrudeFeature.h  Feature.cpp  Feature.h  MoveFeature.cpp  MoveFeature.h  PlaneFeature.cpp  PlaneFeature.h  PointFeature.cpp  PointFeature.h
src/sketch/: CMakeLists.txt  Sketch.cpp  Sketch.h
src/ui/: AppSettings.h  CMakeLists.txt  CreateBoxCommand.cpp  CreateBoxCommand.h  CreateBoxDialog.cpp  CreateBoxDialog.h  CreateCylinderCommand.cpp  CreateCylinderCommand.h  CreateCylinderDialog.cpp  CreateCylinderDialog.h  DocumentTreePanel.cpp  DocumentTreePanel.h  FeatureHistoryPanel.cpp  FeatureHistoryPanel.h  MainWindow.cpp  MainWindow.h  StatsPanel.cpp  StatsPanel.h  TabPage.cpp  TabPage.h  TabPageModel.cpp  TabPageModel.h  TabPageWidget.cpp  TabPageWidget.h  qml.qrc
src/ui/command/: AbstractCommand.h  CreateBoxCommand.cpp  CreateBoxCommand.h  CreateCylinderCommand.cpp  CreateCylinderCommand.h  CreateExtrudeCommand.cpp  CreateExtrudeCommand.h  CreateSketchCommand.cpp  CreateSketchCommand.h  MoveCommand.cpp  MoveCommand.h
src/ui/dialog/: CreateBoxDialog.cpp  CreateBoxDialog.h  CreateCylinderDialog.cpp  CreateCylinderDialog.h  CreateExtrudeDialog.cpp  CreateExtrudeDialog.h  CreateSketchDialog.cpp  CreateSketchDialog.h  SettingsDialog.cpp  SettingsDialog.h
src/ui/qml/: DocumentBrowser.qml  DocumentTab.qml  OcctView.qml  ParametersPane.qml  Theme.qml  TimelineBar.qml  ToolBarArea.qml  main.qml  qml.qrc
src/viewer/: CMakeLists.txt  CustomManipulator.cpp  CustomManipulator.h  FiniteGrid.cpp  FiniteGrid.h  InfiniteGrid.cpp  InfiniteGrid.h  OcctGlTools.cpp  OcctGlTools.h  OcctQOpenGLWidgetViewer.cpp  OcctQOpenGLWidgetViewer.h  OcctQmlViewer.cpp  OcctQmlViewer.h  OcctViewerItem.cpp  OcctViewerItem.h  OcctWindowWrapper.cpp  OcctWindowWrapper.h  SceneGizmos.cpp  SceneGizmos.h  TestShapes.cpp  TestShapes.h  ViewerTypes.cpp  ViewerTypes.h  qml_plugin.cpp  viewer.qrc
tests/: CMakeLists.txt  box_feature_test.cpp  command_integration_test.cpp  cylinder_feature_test.cpp  document_initializer_test.cpp  grid_step_test.cpp  qt_test.cpp  sketch_render_test.cpp  tabs_test.cpp  view_reset_test.cpp  viewer_integration_test.cpp
tests/common/: occt_test.cpp  test_utils.h
tests/features/: box_feature_test.cpp  cylinder_feature_test.cpp  extrude_feature_test.cpp  move_feature_rotation_test.cpp  move_feature_stress_test.cpp  move_feature_test.cpp
tests/model/: document_timeline_test.cpp
tests/serialization/: serialization_test.cpp
tests/sketch/: sketch_constraints_test.cpp  sketch_order_export_test.cpp  sketch_spatial_index_test.cpp  sketch_storage_test.cpp
tests/ui/: command_integration_test.cpp  document_test.cpp  move_ui_integration_test.cpp
